--- a/templates/login.html
+++ b/templates/login.html
@@ -5,15 +5,15 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="login-container">
         <h2>Login to FX Tracker</h2>
         {% if error %}
-            <p style="color:red;">{{ error }}</p>
+            <p class="error">{{ error }}</p>
         {% endif %}
-        <form method="POST">
-            <input type="text" name="email" placeholder="Email" required><br><br>
-            <input type="password" name="password" placeholder="Password" required><br><br>
-            <button type="submit">Login</button>
+        <form action="/login" method="post">
+            <input type="email" name="email" placeholder="Email" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <button type="submit" class="btn">Login</button>
         </form>
     </div>
 </body>
